# case-delfos

./: .gitattributes  .gitignore  README.md  api.py  config.json  create-source.sql  definitions.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml
api/: .dockerignore  Dockerfile  api.py  requirements.txt
etl/: Dockerfile  dagster.yaml  definitions.py  main.py  requirements.txt  wait-for-services.sh
etl/src/: extract.py  load.py  logging_config.py
scripts/: create-source.sql  setup_source.txt
src/: extract.py  load.py  transform.py
