[project]
name = "case-delfos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dagster>=1.12.10",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
